Bug 840244 - Fix Video Capture + libyuv rotation handling for 90 and 270 degrees. r=