media/webrtc/trunk/src/modules/video_capture/main/source/android/video_capture_android.cc
@@ -491,6 +491,9 @@ WebRtc_Word32 VideoCaptureAndroid::StartCapture(
                    "%s: Could not detach thread from JVM", __FUNCTION__);
     }
   }
+
+  //SetCaptureRotation(kCameraRotate270);
+
   if (result == 0) {
     _requestedCapability = capability;
     _captureStarted = true;
